plugins/git/gitjob.cpp
@@ -20,10 +20,14 @@
 
 
 #include "gitjob.h"
+
 #include <QDir>
+
+#include <KProcess>
 
 GitJob::GitJob(const QDir& workingDir, KDevelop::IPlugin* parent, KDevelop::OutputJob::OutputJobVerbosity verbosity)
     : DVcsJob(workingDir, parent, verbosity)
 {
     setType(VcsJob::UserType);
+    process()->setEnv(QStringLiteral("GIT_OPTIONAL_LOCKS"), QStringLiteral("0"));
 }
